# DRL-Shape-Optimization

./: .gitignore  CMakeLists.txt  README.md  YamashitaD.csv  energy_history.csv  energy_history.xlsx  file_IO.cpp  file_io.cpp  file_io.h  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp  microstrip_arrangement.cpp  microstrip_arrangement.h  nominal.csv  result_curve_optimized.csv  temp.cpp
